src/main/java/com/example/tpotrilateracion/errors/FrasesSinPalabras.java
package com.example.tpotrilateracion.errors;

public class FrasesSinPalabras extends RuntimeException {
    public FrasesSinPalabras() {
        super("No hay ninguna palabra");
    }
}


